--- a/tp-admin-master/app/www/view/login/ModifyPwd.html
+++ b/tp-admin-master/app/www/view/login/ModifyPwd.html
@@ -21,7 +21,11 @@
 <meta name=msapplication-tap-highlight content=no>
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
 <link href=css/login.css rel=stylesheet>
-<script src="js/resize.js"></script>
+{js href="__JS__/jquery.js" /}
+{js href="__JS__/jquery.cookie.js" /}
+{css href="__CSS__/login.css" /}
+{js href="__JS__/resize.js" /}
+{js href="__JS__/ModifyPwd.js" /}
 </head>
 <body>
 <div id="app">
@@ -29,7 +33,7 @@
   <header class="top">
     <span>修改密码</span> <!---->
     <div class="iconfont back" style="display: none;"></div>
-    <a href="forgetPwd.html" class="iconfont back"></a>
+    <a href="/www/login/forgetpwd" class="iconfont back"></a>
   </header>
   <nav class="bottom" style="display: none;"><a href="index.html" class=""><i class="iconfont"></i>
     <p>购彩大厅</p>
