--- a/tp-admin-master/app/www/view/login/forgetpwd.html
+++ b/tp-admin-master/app/www/view/login/forgetpwd.html
@@ -24,6 +24,7 @@
 {js href="__JS__/jquery.cookie.js" /}
 {css href="__CSS__/login.css" /}
 {js href="__JS__/resize.js" /}
+{js href="__JS__/forgetpwd.js" /}
 </head>
 <body>
 <div id="app">
@@ -56,7 +57,7 @@
        
     $('.yzm').on('click', function(){
             $('#captchaimg').get(0).src=($('#captchaimg').get(0).src+'?=r'+Math.random(1, 10000));
-        });
+    });
 
 })
 </script>
