--- a/tp-admin-master/app/www/view/login/index.html
+++ b/tp-admin-master/app/www/view/login/index.html
@@ -43,13 +43,12 @@
         <tbody data-v-3060be5c="">
           <tr data-v-3060be5c="">
             <td data-v-3060be5c="" class="username-icon"></td>
-            <td  data-v-3060be5c="" colspan="2" style="position: relative;"><input value="石金融" data-v-3060be5c="" tag="帐号" type="email" placeholder="请输入账号" class="va36" name="UserName" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);">
-              <!----> <em data-v-1355ab9a="" class="clearInput" inputname="UserName" data-v-3060be5c="" style="display: none;"></em></td>
+            <td  data-v-3060be5c="" colspan="2"><input  data-v-3060be5c="" tag="帐号" type="text" placeholder="请输入账号" class="va36" name="UserName" required></td>
           </tr>
           <tr data-v-3060be5c="">
             <td data-v-3060be5c="" class="password-icon"></td>
-            <td data-v-3060be5c="" colspan="2" style="position: relative;"><input value="123456" data-v-3060be5c="" maxlength="16" autocomplete="off" tag="密码" type="Password" placeholder="请输入密码" class="va36" name="Password" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);">
-              <span data-v-7b1322d1="" class="iconfont eye" type="close" data-v-3060be5c=""></span> <em data-v-1355ab9a="" class="clearInput" data-v-3060be5c="" style="display: none;"></em></td>
+            <td data-v-3060be5c="" colspan="2"><input  data-v-3060be5c="" maxlength="16" autocomplete="off" tag="密码" type="password" placeholder="请输入密码" class="va36" name="Password" required>
+            </td>
           </tr>
           <!---->
           <tr data-v-3060be5c=""></tr>
