--- a/tp-admin-master/app/www/view/login/register.html
+++ b/tp-admin-master/app/www/view/login/register.html
@@ -35,23 +35,23 @@
   <div data-v-4d86226c="" class="main">
     <table data-v-4d86226c="">
       <tbody data-v-4d86226c="">
-       <!--  <tr data-v-4d86226c="">
+        <!-- <tr data-v-4d86226c="">
           <td data-v-4d86226c="">邀请码</td>
           <td data-v-4d86226c="" colspan="2" style="position: relative;"><input data-v-4d86226c="" regmsg="您输入的邀请码错误" tag="邀请码" type="tel" placeholder="请输入8位数字邀请码" maxlength="8" class="va43" name="InvitationCode" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);">
             <em data-v-1355ab9a="" class="clearInput" data-v-4d86226c="" style="display: none;"></em></td>
         </tr> -->
         <tr data-v-4d86226c="">
           <td data-v-4d86226c="">账号</td>
-          <td data-v-4d86226c="" colspan="2" style="position: relative;"><input data-v-4d86226c="" type="url" tag="帐号" regmsg="账号应为4-16个字符，可使用字母、数字" maxlength="16" placeholder="请输入您要注册的账号" class="va43" name="UserName" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);">
+          <td data-v-4d86226c="" colspan="2" style="position: relative;"><input data-v-4d86226c="" type="text" tag="帐号" regmsg="账号应为4-16个字符，可使用字母、数字" maxlength="16" placeholder="请输入您要注册的账号" class="va43" name="UserName" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);">
             <em data-v-1355ab9a="" class="clearInput" data-v-4d86226c="" style="display: none;"></em></td>
         </tr>
         <tr data-v-4d86226c="">
           <td data-v-4d86226c="">设置密码</td>
-          <td data-v-4d86226c="" colspan="2" style="position: relative;"><input data-v-4d86226c="" type="url" maxlength="16" tag="设置密码" placeholder="请输入您要设置的密码" class="va43" name="Password" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);"></td>
+          <td data-v-4d86226c="" colspan="2" style="position: relative;"><input data-v-4d86226c="" type="password" maxlength="16" tag="设置密码" placeholder="请输入您要设置的密码" class="va43" name="Password" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);"></td>
         </tr>
         <tr data-v-4d86226c="">
           <td data-v-4d86226c="">验证码</td>
-          <td data-v-4d86226c="" style="position: relative;"><input data-v-4d86226c="" type="email" maxlength="4" tag="验证码" placeholder="请输入验证码" autocomplete="off" class="va43" name="ImgCode" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);">
+          <td data-v-4d86226c="" style="position: relative;"><input data-v-4d86226c="" type="number" maxlength="4" tag="验证码" placeholder="请输入验证码" autocomplete="off" class="va43" name="ImgCode" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);">
             <em data-v-1355ab9a="" class="clearInput" data-v-4d86226c="" style="display: none;"></em></td>
           <td data-v-4d86226c=""><img  id="captchaimg" data-v-4d86226c="" src="{:captcha_src()}" alt="{:lang('Captcha')}" class="yzm">
           </td>
