--- a/tp-admin-master/app/www/view/lottery/lottery1.html
+++ b/tp-admin-master/app/www/view/lottery/lottery1.html
@@ -65,7 +65,7 @@
         </div>
         <div data-v-5dbc8cc5="">
           <p data-v-5dbc8cc5="">1018013期投注截止</p>
-          <div data-v-5dbc8cc5="">00:01:23</div>
+          <div data-v-5dbc8cc5="" class="timeP" data-val1='59'></div>
         </div>
         <table data-v-5dbc8cc5="" style="display: none;" class="openPast">
           <tr data-v-5dbc8cc5="">
