--- a/tp-admin-master/app/www/view/usercenter/billrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/billrecord.html
@@ -60,13 +60,13 @@
             <ul>
                <li>操作时间</li>
                <li>操作类型</li>
-               <li>操作状态</li>
+               <li>操作类型</li>
                <li>金额</li>
-               <li>状态</li>
+               <li>操作状态</li>
             </ul> 
             <!--循环列表-->
             {volist name="all" id="vo"}
-                <ul>
+                <ul class='list'>
                 <li>{$vo.create_time}</li>
                 <li>{$vo.playtype}</li>
                 <li>{$vo.state}</li>
@@ -100,13 +100,13 @@
             <ul>
                <li>操作时间</li>
                <li>操作类型</li>
-               <li>操作状态</li>
+               <li>操作类型</li>
                <li>金额</li>
-               <li>状态</li>
+               <li>操作状态</li>
             </ul>        
             <!--循环列表-->
             {volist name="Tixian" id="tvo"}
-                <ul>
+                <ul class="list">
                 <li>{$tvo.create_time}</li>
                 <li>{$tvo.playtype}</li>
                 <li>{$tvo.state}</li>
@@ -135,13 +135,13 @@
             <ul>
                <li>操作时间</li>
                <li>操作类型</li>
-               <li>操作状态</li>
+               <li>操作类型</li>
                <li>金额</li>
-               <li>状态</li>
+               <li>操作状态</li>
             </ul>        
             <!--循环列表-->
             {volist name="Recharge" id="rvo"}
-                <ul>
+                <ul class="list">
                 <li>{$rvo.create_time}</li>
                 <li>{$rvo.playtype}</li>
                 <li>{$rvo.state}</li>
