--- a/tp-admin-master/app/www/view/lottery/lottery1.html
+++ b/tp-admin-master/app/www/view/lottery/lottery1.html
@@ -47,11 +47,11 @@
           <p data-v-5dbc8cc5="">玩法</p>
           <span data-v-5dbc8cc5="" id="MethodStr" class=""> 和值</span></div>        
           <a href="{:url('www/index/index')}" class="iconfont back" data-v-5dbc8cc5=""></a>
-          <div id='balance'>余额:<span>100000</span></div>
+          <div id='balance'>余额:<span>1000</span></div>
       </header>
       <section data-v-5dbc8cc5="" class="State">
         <div data-v-5dbc8cc5="">
-          <p data-v-5dbc8cc5="">1018012期开奖号码</p>
+          <p data-v-5dbc8cc5="">1018012期开奖号码{$data.lotterynumbers}</p>
           <div data-v-5dbc8cc5="" style="display: block;" class="DiceImg">
             <div data-v-5dbc8cc5="" class="Dice Dice3 Sieve"></div>
             <div data-v-5dbc8cc5="" class="Dice Dice3 Sieve"></div>
