--- a/tp-admin-master/app/www/view/lottery/lottery1.html
+++ b/tp-admin-master/app/www/view/lottery/lottery1.html
@@ -64,8 +64,8 @@
             <i data-v-5dbc8cc5="" class="iconfont xiala"></i></div>
         </div>
         <div data-v-5dbc8cc5="">
-          <p data-v-5dbc8cc5="">{$data.nowperiodsid}期投注截止</p>
-          <div data-v-5dbc8cc5="" class="timeP" data-val1='59'></div>
+            <p data-v-5dbc8cc5="">{$data.nowperiodsid}期投注截止<input type="hidden" id='nowperiodsid' value={$data.nowperiodsid}></p>
+          <div data-v-5dbc8cc5="" class="timeP" data-val1={$data.nowsecond}></div>
         </div>
         <table data-v-5dbc8cc5="" style="display: none;" class="openPast">
           <tr data-v-5dbc8cc5="">
