--- a/tp-admin-master/app/www/view/usercenter/alipay.html
+++ b/tp-admin-master/app/www/view/usercenter/alipay.html
@@ -57,8 +57,9 @@ alert("已复制好，可贴粘。");
       <table data-v-06ff19ac="">
         <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">支付宝姓名</td>
+          <input  type="hidden"  name="playtype" id="playtype"  value="alipaly">
           <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" readonly class="cGold" value="王志宾">
-              <input  type="hidden"  name="Money" name="Money"  value="alipaly">
+            
             <i data-v-06ff19ac="" class="iconfont copy">复制</i></td>
         </tr>
         <tr data-v-06ff19ac="">
