--- a/tp-admin-master/app/www/view/lottery/lottery1.html
+++ b/tp-admin-master/app/www/view/lottery/lottery1.html
@@ -47,7 +47,7 @@
           <p data-v-5dbc8cc5="">玩法</p>
           <span data-v-5dbc8cc5="" id="MethodStr" class=""> 和值</span></div>        
           <a href="{:url('www/index/index')}" class="iconfont back" data-v-5dbc8cc5=""></a>
-          <div id='balance'>余额:<span>1000</span></div>
+          <div id='balance'>余额:<span>{$data.balance}</span></div>
       </header>
       <section data-v-5dbc8cc5="" class="State">
         <div data-v-5dbc8cc5="">
