--- a/tp-admin-master/app/www/view/usercenter/betrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/betrecord.html
@@ -40,7 +40,7 @@
       <a href="{:url('www/newwinners/index')}" class=""><i class="iconfont"></i>    <p>发现</p>    </a>
       <a href="{:url('www/usercenter/index')}" class=""><i class="iconfont"></i>    <p>我的账户</p>    </a>
   </nav>
-  <div data-v-1558f0ab="" class="main" s="[object Object]">
+  <div data-v-1558f0ab="" class="main" s="[object Object]" style='padding-top: .9em;'>
     <!---->
     <div data-v-1558f0ab="" id="leftTabBox">
       <div data-v-1558f0ab="" class="hd">
