--- a/tp-admin-master/app/www/view/lottery/lottery1.html
+++ b/tp-admin-master/app/www/view/lottery/lottery1.html
@@ -47,15 +47,15 @@
           <p data-v-5dbc8cc5="">玩法</p>
           <span data-v-5dbc8cc5="" id="MethodStr" class=""> 和值</span></div>        
           <a href="{:url('www/index/index')}" class="iconfont back" data-v-5dbc8cc5=""></a>
-          <div id='balance'>余额:<span>{$data.balance}</span></div>
+          <div id='balance'>余额:<span>{$data.balance}</span>元</div>
       </header>
       <section data-v-5dbc8cc5="" class="State">
         <div data-v-5dbc8cc5="">
           <p data-v-5dbc8cc5="">{$lastnumbers.periodsid}期开奖号码</p>
           <div data-v-5dbc8cc5="" style="display: block;" class="DiceImg">
-            <div data-v-5dbc8cc5="" class="Dice Dice3 Sieve"></div>
-            <div data-v-5dbc8cc5="" class="Dice Dice3 Sieve"></div>
-            <div data-v-5dbc8cc5="" class="Dice Dice3 Sieve"></div>
+            <div data-v-5dbc8cc5="" class="Dice Dice{$lastnumbers.lotterynumbers.0} Sieve"></div>
+            <div data-v-5dbc8cc5="" class="Dice Dice{$lastnumbers.lotterynumbers.1} Sieve"></div>
+            <div data-v-5dbc8cc5="" class="Dice Dice{$lastnumbers.lotterynumbers.2} Sieve"></div>
             <i data-v-5dbc8cc5="" class="iconfont xiala"></i></div>
           <div data-v-5dbc8cc5="" style="display: block;" class="DiceText">
             <div data-v-5dbc8cc5="" class="Dice">{$lastnumbers.lotterynumbers.0}</div>
@@ -79,9 +79,9 @@
           <tr data-v-5dbc8cc5="">
             <td data-v-5dbc8cc5="">&nbsp;&nbsp;&nbsp;{$vo['periodsid']}<i data-v-5dbc8cc5="">—</i></td>
             <td data-v-5dbc8cc5="" style="position:relative;"><div data-v-5dbc8cc5="" class="openPastDiceImg">
-                <div data-v-5dbc8cc5="" class="Dice Dice1">{$vo.lotterynumbers['0']}</div>
-                <div data-v-5dbc8cc5="" class="Dice Dice3">{$vo.lotterynumbers['1']}</div>
-                <div data-v-5dbc8cc5="" class="Dice Dice4">{$vo.lotterynumbers['2']}</div>
+                <div data-v-5dbc8cc5="" class="Dice Dice{$vo.lotterynumbers['0']}"></div>
+                <div data-v-5dbc8cc5="" class="Dice Dice{$vo.lotterynumbers['1']}"></div>
+                <div data-v-5dbc8cc5="" class="Dice Dice{$vo.lotterynumbers['2']}"></div>
               </div>
               <div data-v-5dbc8cc5="" class="openPastDiceText">
                 <div data-v-5dbc8cc5="" class="Dice">{$vo.lotterynumbers['0']}</div>
